[gd_scene load_steps=34 format=3 uid="uid://ki30i1muyhum"]

[ext_resource type="Script" uid="uid://ddkp1stanbi3b" path="res://scripts/building.gd" id="1_elqb8"]
[ext_resource type="Script" uid="uid://ccssptg1bxli2" path="res://scripts/main.gd" id="1_jlsqs"]
[ext_resource type="Theme" uid="uid://cktuqhdeum3lj" path="res://themes/buttons.tres" id="2_cvmbd"]
[ext_resource type="Script" uid="uid://k81e70honlmo" path="res://scripts/confirmation_dialog.gd" id="2_mwfav"]
[ext_resource type="PackedScene" uid="uid://cjalvbd6hgwlg" path="res://scenes/Repair_History.tscn" id="3_3p2gp"]
[ext_resource type="Script" uid="uid://px5ry0plvw83" path="res://scripts/multimesh_handler.gd" id="3_bjd11"]
[ext_resource type="PackedScene" uid="uid://v3o0hovlhssr" path="res://scenes/Welcome_Message.tscn" id="4_1nqs0"]
[ext_resource type="PackedScene" uid="uid://u5bnls8eokd6" path="res://scenes/Warranty_Info.tscn" id="4_nfivy"]
[ext_resource type="PackedScene" uid="uid://dxr6k7niho8dh" path="res://scenes/Message.tscn" id="4_wp0k4"]
[ext_resource type="PackedScene" uid="uid://cx0s6mhfg5f8d" path="res://scenes/contextual_menu.tscn" id="5_ft6cd"]
[ext_resource type="PackedScene" uid="uid://c18muj68ragkw" path="res://scenes/UI.tscn" id="5_jlsqs"]
[ext_resource type="PackedScene" uid="uid://bmytb0tm44qkq" path="res://scenes/UI_Building.tscn" id="5_lhr70"]
[ext_resource type="Script" uid="uid://bfwbk4s4cmbqm" path="res://scripts/camera_pivot.gd" id="5_q8u5g"]
[ext_resource type="PackedScene" uid="uid://b8ju7yqytwphf" path="res://scenes/Wall_Marker.tscn" id="6_c01mt"]
[ext_resource type="Shader" uid="uid://dyj6gbfw1nryi" path="res://shaders/XRaygdshader.gdshader" id="6_q8u5g"]
[ext_resource type="PackedScene" uid="uid://baot4kh78hesi" path="res://scenes/Wall_Marker_Delete.tscn" id="7_nxtc6"]
[ext_resource type="Script" uid="uid://dgh2ouowwyq1o" path="res://scripts/stories_handler.gd" id="8_wp0k4"]
[ext_resource type="Script" uid="uid://b2uoajv7xwbgh" path="res://scripts/floor_plans.gd" id="11_qmy6f"]
[ext_resource type="Material" uid="uid://ckepov0d76chf" path="res://materials/ground_mesh_build.tres" id="12_mwfav"]
[ext_resource type="Texture2D" uid="uid://ba76yyuhfq4wp" path="res://textures/grids/dark_mode_grid.png" id="14_bb450"]

[sub_resource type="CylinderMesh" id="CylinderMesh_jlsqs"]
top_radius = 4.0
bottom_radius = 4.0
height = 0.001
rings = 0
cap_bottom = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lhr70"]
render_priority = 0
shader = ExtResource("6_q8u5g")

[sub_resource type="TextMesh" id="TextMesh_jlsqs"]
text = "â†’"
font_size = 63

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q8u5g"]
shading_mode = 0
albedo_color = Color(0.929412, 0.290196, 0.380392, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jlsqs"]
shading_mode = 0
albedo_color = Color(0.258824, 0.556863, 0.933333, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_elqb8"]
size = Vector2(150, 150)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3p2gp"]
shading_mode = 0
albedo_texture = ExtResource("14_bb450")
uv1_scale = Vector3(150.025, 150.025, 150.025)
texture_filter = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qmy6f"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
shading_mode = 0
albedo_color = Color(1, 1, 1, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_bjd11"]
size = Vector2(10, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_rvslj"]
size = Vector3(100, 0.5, 100)

[sub_resource type="Gradient" id="Gradient_lhr70"]
offsets = PackedFloat32Array(0, 0.959184, 0.972789, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.15, 0.075, 0.075, 1, 0.5, 0.25, 0.25, 1, 0.74, 0.37, 0.37, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wp0k4"]
gradient = SubResource("Gradient_lhr70")
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lhr70"]
blend_mode = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0)
albedo_texture = SubResource("GradientTexture2D_wp0k4")
uv1_scale = Vector3(150.025, 150.025, 150.025)

[node name="Main" type="Node3D"]
script = ExtResource("1_jlsqs")
metadata/_edit_lock_ = true

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
gui_embed_subwindows = true
title = "Quit Application"
initial_position = 1
size = Vector2i(252, 100)
force_native = true
theme = ExtResource("2_cvmbd")
dialog_text = "Are you sure you want to quit?"
script = ExtResource("2_mwfav")

[node name="Welcome_Message" parent="." instance=ExtResource("4_1nqs0")]
unique_name_in_owner = true
gui_embed_subwindows = true
always_on_top = true

[node name="Warranty_Info" parent="." instance=ExtResource("4_nfivy")]
unique_name_in_owner = true

[node name="Repair_History" parent="." instance=ExtResource("3_3p2gp")]
unique_name_in_owner = true

[node name="Contextual_Menu" parent="." instance=ExtResource("5_ft6cd")]
unique_name_in_owner = true

[node name="MultimeshHandler" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_bjd11")

[node name="StoriesHandler" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("8_wp0k4")

[node name="Building" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_elqb8")
metadata/_edit_lock_ = true

[node name="Spectating" type="Node3D" parent="."]
metadata/_edit_lock_ = true

[node name="Camera_Pivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0.5, 0)
script = ExtResource("5_q8u5g")
metadata/_edit_lock_ = true

[node name="Message" parent="Camera_Pivot" instance=ExtResource("4_wp0k4")]
unique_name_in_owner = true
follow_viewport_enabled = true

[node name="UI" parent="Camera_Pivot" instance=ExtResource("5_jlsqs")]
unique_name_in_owner = true
follow_viewport_enabled = true

[node name="UI_Building" parent="Camera_Pivot" instance=ExtResource("5_lhr70")]
unique_name_in_owner = true
layer = -1
follow_viewport_enabled = true

[node name="Camera3D" type="Camera3D" parent="Camera_Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 12, 12.157)
projection = 1
current = true
size = 15.0

[node name="XRay" type="MeshInstance3D" parent="Camera_Pivot/Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1.31134e-07, -1, 0, 1, 1.31134e-07, 0, -2.7696e-07, -1.25979)
mesh = SubResource("CylinderMesh_jlsqs")
surface_material_override/0 = SubResource("ShaderMaterial_lhr70")

[node name="Top_View_Node" type="Node3D" parent="Camera_Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)

[node name="WallStoryContainer" type="Node3D" parent="."]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="FloorStoryContainer" type="Node3D" parent="."]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="ApplianceStoryContainer" type="Node3D" parent="."]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="RoofContainer" type="Node3D" parent="."]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="MultiMeshStoryContainers" type="Node3D" parent="."]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="Gizmo" type="Node3D" parent="."]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="X+" type="MeshInstance3D" parent="Gizmo"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.275, 0.75, 0)
cast_shadow = 0
mesh = SubResource("TextMesh_jlsqs")
skeleton = NodePath("../../GroundCollision")
surface_material_override/0 = SubResource("StandardMaterial3D_q8u5g")

[node name="Z+" type="MeshInstance3D" parent="Gizmo"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.75, 0.275)
cast_shadow = 0
mesh = SubResource("TextMesh_jlsqs")
skeleton = NodePath("../../GroundCollision")
surface_material_override/0 = SubResource("StandardMaterial3D_jlsqs")

[node name="GroundMesh_Building" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
cast_shadow = 0
gi_mode = 0
mesh = SubResource("PlaneMesh_elqb8")
surface_material_override/0 = ExtResource("12_mwfav")
metadata/_edit_lock_ = true

[node name="GroundMesh_Spectating" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.001, 0)
cast_shadow = 0
gi_mode = 0
mesh = SubResource("PlaneMesh_elqb8")
surface_material_override/0 = SubResource("StandardMaterial3D_3p2gp")
metadata/_edit_lock_ = true

[node name="FloorPlans" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
visible = false
material_override = SubResource("StandardMaterial3D_qmy6f")
cast_shadow = 0
gi_mode = 0
mesh = SubResource("PlaneMesh_bjd11")
script = ExtResource("11_qmy6f")
metadata/_edit_lock_ = true

[node name="GroundCollision" type="StaticBody3D" parent="."]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="GroundCollision"]
shape = SubResource("BoxShape3D_rvslj")

[node name="Ground_Mesh" type="MeshInstance3D" parent="GroundCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.001, 0)
cast_shadow = 0
gi_mode = 0
mesh = SubResource("PlaneMesh_elqb8")
surface_material_override/0 = SubResource("StandardMaterial3D_lhr70")
metadata/_edit_lock_ = true

[node name="WallClickContainers" type="Node3D" parent="."]
metadata/_edit_lock_ = true

[node name="WallMarkerDraw" parent="WallClickContainers" instance=ExtResource("6_c01mt")]
unique_name_in_owner = true
visible = false
metadata/_edit_lock_ = true

[node name="WallMarkerHold" parent="WallClickContainers" instance=ExtResource("6_c01mt")]
unique_name_in_owner = true
visible = false
metadata/_edit_lock_ = true

[node name="WallMarkerDelete" parent="WallClickContainers/WallMarkerHold" instance=ExtResource("7_nxtc6")]
unique_name_in_owner = true
visible = false
metadata/_edit_lock_ = true

[connection signal="canceled" from="ConfirmationDialog" to="ConfirmationDialog" method="_on_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="ConfirmationDialog" method="_on_confirmed"]
[connection signal="is_building_changed" from="Building" to="StoriesHandler" method="_on_building_is_building_changed"]
